--- a/assets/css/components/stays.css
+++ b/assets/css/components/stays.css
@@ -1,6 +1,5 @@
 #stays {
   background-color: #cfd3ce;
-  padding-top: 32px;
 }
 
 #stays .cards {
